--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -18,11 +18,11 @@ spec:
               
   template:
     metadata:
-      name: '{{path.basename}}-{{name}}'
+      name: default
     spec:
       project: '{{metadata.labels.environment}}'
       source:
-        repoURL: https://github.com/argoproj/argo-cd.git
+        repoURL: https://github.com/DataVizz/codefresh-contrib/gitops-cert-level-2-examples.git
         targetRevision: HEAD
         path: '{{path}}'
       destination:
