--- a/custom-diff/applications/external-helm-app.yml
+++ b/custom-diff/applications/external-helm-app.yml
@@ -22,13 +22,13 @@ spec:
     syncOptions:
       - CreateNamespace=true  
 
-  # ignoreDifferences:
-  # - group: apps
-  #   kind: Deployment
-  #   jsonPointers:
-  #   - /spec/replicas    
-  #   - /metadata/annotations/creation
-  # - group: ""
-  #   kind: Secrets
-  #   jsonPointers:
-  #   - /data/my-password
+  ignoreDifferences:
+  - group: apps
+    kind: Deployment
+    jsonPointers:
+    - /spec/replicas    
+    - /metadata/annotations/creation
+  - group: ""
+    kind: Secrets
+    jsonPointers:
+    - /data/my-password
